# multi-ai-agent-pm-team

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.js
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  security-scan.yml
agents/01-customer-feedback-pipeline/: README.md  config.js
agents/02-data-scientist/: README.md  config.js
agents/03-metrics-narrator/: README.md  config.js
agents/04-chief-of-staff/: README.md  config.js
agents/05-prd-architect/: README.md  config.js
agents/06-stakeholder-translator/: README.md  config.js
docs/: AGENT-DESIGN.md  API-REFERENCE.md  ARCHITECTURE-DECISIONS.md  ARCHITECTURE.md  CHANGELOG.md  COLOR-PALETTE.md  CONTRIBUTING-GUIDE.md  DATA-CONTRACTS.md  DEPLOYMENT.md  DESIGN-SYSTEM.md  FAQ.md  PERFORMANCE.md  PIPELINE-ORCHESTRATION.md  SECURITY-CONSIDERATIONS.md
pipeline/: README.md  __init__.py  cli.py  config.py  models.py  orchestrator.py
pipeline/agents/: __init__.py  base.py  chief_of_staff.py  data_scientist.py  feedback_pipeline.py  metrics_narrator.py  (+2 more)
screenshots/: README.md
scripts/: analyze_data.py  run_pipeline.py  validate_outputs.py
src/: App.jsx  index.css
tests/: __init__.py  conftest.py  test_agents.py  test_data.py  test_models.py  test_orchestrator.py  test_security.py
(+48 files in other folders)
